@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
 minecraft_version=1.19
-yarn_mappings=1.19+build.1
-loader_version=0.14.6
+yarn_mappings=1.19+build.4
+loader_version=0.14.8
 # Mod Properties
-mod_version=0.1.4-1.19
+mod_version=0.1.5-1.19
 maven_group=com.terriblefriends
 archives_base_name=serverutilities
 # Dependencies
