@@ -3,13 +3,22 @@ package com.terriblefriends.serverutilities;
 import com.terriblefriends.serverutilities.command.*;
 import net.fabricmc.api.ModInitializer;
 import net.fabricmc.fabric.api.command.v2.CommandRegistrationCallback;
+import net.fabricmc.fabric.api.event.lifecycle.v1.ServerBlockEntityEvents;
 import net.fabricmc.fabric.api.event.lifecycle.v1.ServerLifecycleEvents;
 import net.fabricmc.fabric.api.event.lifecycle.v1.ServerTickEvents;
 import net.fabricmc.fabric.api.gamerule.v1.GameRuleFactory;
 import net.fabricmc.fabric.api.gamerule.v1.GameRuleRegistry;
+import net.minecraft.block.entity.LootableContainerBlockEntity;
+import net.minecraft.block.entity.MobSpawnerBlockEntity;
+import net.minecraft.entity.passive.PigEntity;
+import net.minecraft.nbt.NbtCompound;
 import net.minecraft.server.MinecraftServer;
+import net.minecraft.server.network.ServerPlayerEntity;
 import net.minecraft.server.world.ServerWorld;
+import net.minecraft.text.Text;
 import net.minecraft.world.GameRules;
+
+import java.util.Iterator;
 
 public class ServerUtilities implements ModInitializer {
     public static MinecraftServer server;
@@ -34,21 +43,22 @@ public class ServerUtilities implements ModInitializer {
 
     @Override
     public void onInitialize() {
-        CommandRegistrationCallback.EVENT.register(FlyCommand::register); // fly
-        CommandRegistrationCallback.EVENT.register(GodCommand::register); // god
-        CommandRegistrationCallback.EVENT.register(FlySpeedCommand::register); // flyspeed
-        CommandRegistrationCallback.EVENT.register(SuicideCommand::register); // suicide
-        CommandRegistrationCallback.EVENT.register(OperatorCommand::register); // opwp
-        CommandRegistrationCallback.EVENT.register(GetWeatherCommand::register); // getweather
-        CommandRegistrationCallback.EVENT.register(SetWeatherTimeCommand::register); // setweathertime
-        CommandRegistrationCallback.EVENT.register(SetScoreboardCommand::register); // setscoreboard
         CommandRegistrationCallback.EVENT.register(DiscordCommand::register); // discord
         CommandRegistrationCallback.EVENT.register(DynmapCommand::register); // dynmaplink
-        CommandRegistrationCallback.EVENT.register(VoteCommand::register); //vote
+        CommandRegistrationCallback.EVENT.register(FlyCommand::register); // fly
+        CommandRegistrationCallback.EVENT.register(FlySpeedCommand::register); // flyspeed
+        CommandRegistrationCallback.EVENT.register(GetWeatherCommand::register); // getweather
+        CommandRegistrationCallback.EVENT.register(GodCommand::register); // god
+        CommandRegistrationCallback.EVENT.register(OperatorCommand::register); // opwp
+        CommandRegistrationCallback.EVENT.register(SetScoreboardCommand::register); // setscoreboard
+        CommandRegistrationCallback.EVENT.register(SetWeatherTimeCommand::register); // setweathertime
         CommandRegistrationCallback.EVENT.register(ShadowCommand::register); //shadow
-        CommandRegistrationCallback.EVENT.register(VoteBanCommand::register); //voteban
+        CommandRegistrationCallback.EVENT.register(SuicideCommand::register); // suicide
         CommandRegistrationCallback.EVENT.register(TempBanCommand::register); //tempban
+        CommandRegistrationCallback.EVENT.register(VoteBanCommand::register); //voteban
+        CommandRegistrationCallback.EVENT.register(VoteCommand::register); //vote
         CommandRegistrationCallback.EVENT.register(WhereIsCommand::register); //whereis
+
         ServerLifecycleEvents.SERVER_STARTED.register(serverArg -> {
             overworld = serverArg.getOverworld();
             server = serverArg;
@@ -56,6 +66,21 @@ public class ServerUtilities implements ModInitializer {
         ServerTickEvents.END_SERVER_TICK.register(server -> {
             actionRateLimit = server.getOverworld().getGameRules().getInt(ACTION_RATE_LIMIT);
             VoteBanCommand.tickBanVoter();
+        });
+        ServerBlockEntityEvents.BLOCK_ENTITY_LOAD.register((blockEntity, world) -> {
+            if (blockEntity instanceof MobSpawnerBlockEntity) {
+                MobSpawnerBlockEntity spawner = (MobSpawnerBlockEntity) blockEntity;
+                if (spawner.getLogic().getRenderedEntity(world) instanceof PigEntity) {
+                    String message = "Pig spawner located! "+blockEntity.getPos().toShortString();
+                    System.out.println(message);
+
+                    for (ServerPlayerEntity serverPlayerEntity : server.getPlayerManager().getPlayerList()) {
+                        if (server.getPlayerManager().isOperator(serverPlayerEntity.getGameProfile())) {
+                            serverPlayerEntity.sendMessage(Text.literal(message));
+                        }
+                    }
+                }
+            }
         });
     }
 }
