@@ -3,6 +3,6 @@ package com.terriblefriends.serverutilities.access;
 import net.minecraft.nbt.NbtCompound;
 
 public interface BlockEntityAccessor {
-    NbtCompound createNbtWithIdentifyingDataDestroyShadows();
+    void createNbtWithIdentifyingDataDestroyShadows();
     NbtCompound createNbtShulkerDestroyShadows();
 }
